--- a/arch/arm64/configs/exynos2100_p3sxxx_defconfig
+++ b/arch/arm64/configs/exynos2100_p3sxxx_defconfig
@@ -1908,7 +1908,7 @@ CONFIG_DM_SNAPSHOT=y
 # CONFIG_DM_INIT is not set
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY is not set
 # CONFIG_DM_VERITY_VERIFY_ROOTHASH_SIG is not set
 CONFIG_DM_VERITY_AVB=y
 CONFIG_DM_VERITY_FEC=y
