defconfig: disable CONFIG_KPERFMON

--- a/arch/arm64/configs/exynos2100_p3sxxx_defconfig
+++ b/arch/arm64/configs/exynos2100_p3sxxx_defconfig
@@ -6210,7 +6210,7 @@ CONFIG_TZIC_USE_TZDEV=y
 #
 # samsung Performace manager
 #
-CONFIG_KPERFMON=y
+# CONFIG_KPERFMON is not set
 # end of samsung Performace manager
 
 CONFIG_INPUT_SEC_INPUT=m
